# AI-Experiment

./: .gitignore  pyproject.toml
apps/pytorch-experiment/: pyproject.toml
apps/pytorch-experiment/src/pytorch_experiment/: __main__.py
